<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.michaelevans.aftermath.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startPicker"
        android:text="@string/get_contact_uri" />

    <TextView
        android:id="@+id/contact_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_contact" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startPhotoPicker"
        android:text="@string/get_photo_uri" />

    <TextView
        android:id="@+id/photo_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startPicker"
        android:text="@string/pick_a_photo" />

</LinearLayout>
